# steam-mcp

./: .gitignore  .mcpbignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build_mcpb.py  glama.json  install-mcp.ps1  justfile  llms-full.txt  llms.txt  manifest.json  mcpb.json  pyproject.toml  run_server.py  start.ps1  steam-mcp-backend.spec
.github/workflows/: ci.yml  release.yml
assets/prompts/: examples.json  system.md  troubleshooting.md  user.md  workflows.md
native/: .gitignore  Cargo.toml  README.md  build-sidecar.ps1  build.ps1  package.json  tauri.conf.json
native/icons/: icon.icns
native/src/: main.rs
scripts/: check_call.py  check_tool.py  generate_llms_full.py  smoke_test.py  test_search.py
src/steam_mcp/: __init__.py  ai.py  chat.py  chat_rules.py  client.py  config.py  discovery.py  formatters.py  server.py  transport.py  web.py
src/steam_mcp/mcp/: registry.py
src/steam_mcp/mcp/tools/: __init__.py  agentic.py  help.py  library.py  portmanteau.py  prefab.py  profile.py  prompts.py  resources.py  stats.py  store.py  workshop.py
src/steam_mcp/services/: __init__.py  library.py  profile.py  publish.py  stats.py  store.py  workshop.py
src/steam_mcp/skills/steam-mcp/: SKILL.md
tests/: test_api.py  test_chat.py
webapp/: .env.production  index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  vite.config.ts
webapp/e2e/: steam-mcp.spec.ts
webapp/src/: App.css  App.tsx  main.tsx
webapp/src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
webapp/src/lib/: api.ts
webapp/src/pages/: chat.tsx  dashboard.tsx  games.tsx  help.tsx  profile.tsx  settings.tsx
