[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steam-mcp"
version = "0.2.1"
description = "MCP server for Steam — profile, library, stats, store, and Workshop portmanteau tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "fastmcp>=3.2.0,<4",
    "prefab-ui>=0.14.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "structlog>=24.0.0",
    "uvicorn[standard]>=0.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
steam-mcp = "steam_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/steam_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101"]

[tool.ruff.format]
quote-style = "double"
